# CCotti

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cfg  install_on_beagle.sh
headers/: msg_queue.h  sem.h  shared_memory.h  signal.h  thread.h  tools.h
include/: client.h  http_types.h  httpserver.h  main.h  msg_queue.h  mutex.h  sem.h  server.h  shared_memory.h  sig.h  socket.h  temp_sensor.h  thread.h  tools.h
lib_include/: shared_memory.h  tools.h
lib_src/: sem.cpp  server.cpp  signal.cpp  socket.cpp
src/: CMakeLists.txt  client.cpp  http_types.cpp  httpserver.cpp  main.cpp  msg_queue.cpp  mutex.cpp  sem.cpp  server.cpp  shared_memory.cpp  signal.cpp  socket.cpp  temp_sensor.cpp  thread.cpp  tools.cpp
test/: CMakeLists.txt  test_msg_queue.cpp  test_sem.cpp  test_server.cpp  test_shared_mem.cpp  test_signal.cpp  test_thread.cpp
tests/: test_msg_queue.cpp  test_sem.cpp  test_shared_memory.cpp  test_signal.cpp  test_thread.cpp
web/: index.html  max_clients.html  not_found.html
web/errors/: bad_request.html
